--- a/references.bib
+++ b/references.bib
@@ -3,7 +3,8 @@
   booktitle = {Proceedings of the {{IEEE}} Conference on Computer Vision and Pattern Recognition ({{CVPR}})},
   author = {Armeni, Iro and Sener, Ozan and Zamir, Amir R. and Jiang, Helen and Brilakis, Ioannis and Fischer, Martin and Savarese, Silvio},
   year = {2016},
-  month = jun
+  month = jun,
+  pages = {1534--1543}
 }
 
 @article{barbole_comparative_2023,
@@ -360,7 +361,8 @@
   booktitle = {Proceedings of the {{IEEE}}/{{CVF}} Conference on Computer Vision and Pattern Recognition ({{CVPR}})},
   author = {Tchapmi, Lyne P. and Kosaraju, Vineet and Rezatofighi, Hamid and Reid, Ian and Savarese, Silvio},
   year = {2019},
-  month = jun
+  month = jun,
+  pages = {383--392}
 }
 
 @article{tesema_point_2024,
@@ -394,6 +396,7 @@
   editor = {Guyon, I. and Luxburg, U. Von and Bengio, S. and Wallach, H. and Fergus, R. and Vishwanathan, S. and Garnett, R.},
   year = {2017},
   volume = {30},
+  pages = {1--11},
   publisher = {Curran Associates, Inc.}
 }
 
@@ -480,7 +483,8 @@
   booktitle = {Proceedings of the {{IEEE}}/{{CVF}} International Conference on Computer Vision ({{ICCV}})},
   author = {Yang, Guandao and Huang, Xun and Hao, Zekun and Liu, Ming-Yu and Belongie, Serge and Hariharan, Bharath},
   year = {2019},
-  month = oct
+  month = oct,
+  pages = {4541--4550}
 }
 
 @inproceedings{yu_pointr_2021,
