Editing by Blok

--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,16 @@
+@incollection{alston_grapes_2019,
+  title = {Grapes in the {{World Economy}}},
+  booktitle = {The {{Grape Genome}}},
+  author = {Alston, Julian M. and Sambucci, Olena},
+  editor = {Cantu, Dario and Walker, M. Andrew},
+  year = {2019},
+  pages = {1--24},
+  publisher = {Springer International Publishing},
+  address = {Cham},
+  doi = {10.1007/978-3-030-18601-2_1},
+  isbn = {978-3-030-18600-5 978-3-030-18601-2}
+}
+
 @inproceedings{armeni_3d_2016,
   title = {{{3D}} Semantic Parsing of Large-Scale Indoor Spaces},
   booktitle = {Proceedings of the {{IEEE}} Conference on Computer Vision and Pattern Recognition ({{CVPR}})},
@@ -398,6 +411,17 @@
   volume = {30},
   pages = {1--11},
   publisher = {Curran Associates, Inc.}
+}
+
+@incollection{venkitasamy_grapes_2019,
+  title = {Grapes},
+  booktitle = {Integrated {{Processing Technologies}} for {{Food}} and {{Agricultural By-Products}}},
+  author = {Venkitasamy, Chandrasekar and Zhao, Liming and Zhang, Ruihong and Pan, Zhongli},
+  year = {2019},
+  pages = {133--163},
+  publisher = {Elsevier},
+  doi = {10.1016/B978-0-12-814138-0.00006-X},
+  isbn = {978-0-12-814138-0}
 }
 
 @inproceedings{vu_softgroup_2022,
