Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -673,7 +673,7 @@ During the preparation of this work the authors used ChatGPT in order to check g
 The authors declare that they have no known competing financial interests or personal relationships that could have appeared to influence the work reported in this paper.
 
 \section*{Data availability}
-The dataset and model weight will be available on request.
+The dataset and model weight for the test usage is available here: https://github.com/I3-Laboratory/GrapeCPNet. The whole dataset used in this paper is available upon request.
 
 \section*{Funding}
 This study was partially supported by the National Natural Science Foundation of China (NSFC) Program 62276009 and the Japan Science and Technology Agency (JST) AIP Acceleration Research JPMJCR21U3, the Hokkaido Sarabetsu Village “Endowed Chair for Field Phenomics” project.
